Sun Jul 31 22:50:23 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c (vm_make_env_each): don't save prev env value.
	It is no longer used. [Feature #4871] [ruby-dev:43743]

	* vm.c (check_env): changed accordingly.

Sun Jul 31 20:21:36 2011  "Yuki Sonoda (Yugui)"  <yugui@yugui.jp>

	* common.mk (ECHO1): ":" in a make variable replacement cause a syntax
	  error with /usr/ccs/bin/make on Solaris.  Uses $(NULLCMD) instead.

	* configure.in (NULLCMD): new check.

	* Makefile.in (NULLCMD): Reflects checking in configure.

	* win32/Makefile.sub (NULLCMD): new assignment.

Sun Jul 31 18:58:59 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_pipe): pipe on cygwin can succeed half but fail
	  half.

Sun Jul 31 11:31:07 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm.c: check if cfp is valid. [Bug #5083] [ruby-dev:44208]

Sun Jul 31 09:18:28 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Update to RDoc 3.9.  Fixed `ri []`, stopdoc creating an
	  object reference, nodoc for class aliases, verbatim === lines.

Sun Jul 31 01:29:08 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c (rb_io_each_byte): remove unused variable e.

Sat Jul 31 01:23:45 2011  Kenta Murata  <mrkn@mrkn.jp>

	* test/bigdecimal/test_bigdecimal.rb (test_version): removed.

Sat Jul 30 23:19:09 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/default_gems: separate from tool/rbinstall.rb.

Sat Jul 30 23:14:44 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_each_byte): rbuf can be refreshed during yield.
	  [Bug #5119]

Sat Jul 30 22:35:50 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* strftime.c (NEEDS): avoid SEGV due to integer overflow in
	  sparc-solaris2.10 and i686-linux.  fix [Bug #4456] [ruby-dev:43284]

Sat Jul 30 17:26:26 2011  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_win32ole_variant.rb: use skip method to skip the test.

	* test/win32ole/test_win32ole_variant_outarg.rb: ditto.
