@@ -1,3 +1,8 @@
+Sun Jul 31 23:06:57 2011  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* vm.c (check_env): print debug messages to stderr.
+	[Feature #4871] [ruby-dev:43743]
+
 Sun Jul 31 22:50:23 2011  Kazuki Tsujimoto  <kazuki@callcc.net>
 
 	* vm.c (vm_make_env_each): don't save prev env value.
